--- a/UserService/Dockerfile
+++ b/UserService/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:17
 EXPOSE 8081
-ADD target/spring-boot-docker.jar spring-boot-docker.jar
-ENTRYPOINT ["java","-jar","/spring-boot-docker.jar"]
+ARG JAR_FILE=target/*.jar
+COPY ./target/spring-boot-docker.jar .
+ENTRYPOINT ["java","-jar","./spring-boot-docker.jar"]
