--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/testDB
+spring.datasource.url = jdbc:postgresql://postgres-db:5432/testDB
 spring.datasource.username= postgres
 spring.datasource.password= abhaveda
 server.port=8081
